--- a/config.h.in
+++ b/config.h.in
@@ -81,6 +81,9 @@
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
+/* Package data directory */
+#undef PACKAGE_DATA_DIR
+
 /* Define to the full name of this package. */
 #undef PACKAGE_NAME
 
