Install data to /usr/share/bibledit
https://github.com/bibledit/bibledit/issues/573

--- a/Makefile.am
+++ b/Makefile.am
@@ -588,3 +588,13 @@ dist-hook:
 	rm -f $(distdir)/config.status
 
 CLEANFILES = bibledit*.gz *~
+
+all-local:
+	pkgdata/create.sh
+
+install-data-hook:
+	$(srcdir)/pkgdata/install.sh $(srcdir) $(DESTDIR) $(pkgdatadir)
+
+uninstall-local:
+	rm -rf $(DESTDIR)$(pkgdatadir)/*
+
