--- a/config.h.in
+++ b/config.h.in
@@ -87,6 +87,9 @@
 /* Define to the full name of this package. */
 #undef PACKAGE_NAME
 
+/* Package prefix directory */
+#undef PACKAGE_PREFIX_DIR
+
 /* Define to the full name and version of this package. */
 #undef PACKAGE_STRING
 
