--- a/Makefile.in
+++ b/Makefile.in
@@ -195,48 +195,47 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	manage/hyphenate.$(OBJEXT) manage/write.$(OBJEXT) \
 	manage/privileges.$(OBJEXT) system/index.$(OBJEXT) \
 	system/logic.$(OBJEXT) collaboration/index.$(OBJEXT) \
-	collaboration/url.$(OBJEXT) collaboration/link.$(OBJEXT) \
-	collaboration/direction.$(OBJEXT) search/rebibles.$(OBJEXT) \
-	search/renotes.$(OBJEXT) access/user.$(OBJEXT) \
-	access/bible.$(OBJEXT) access/logic.$(OBJEXT) \
-	dialog/entry.$(OBJEXT) dialog/list.$(OBJEXT) \
-	dialog/yes.$(OBJEXT) dialog/color.$(OBJEXT) \
-	dialog/books.$(OBJEXT) dialog/upload.$(OBJEXT) \
-	fonts/logic.$(OBJEXT) versification/index.$(OBJEXT) \
-	versification/system.$(OBJEXT) versification/logic.$(OBJEXT) \
-	book/create.$(OBJEXT) compare/index.$(OBJEXT) \
-	compare/compare.$(OBJEXT) jobs/index.$(OBJEXT) \
-	editverse/index.$(OBJEXT) editone/index.$(OBJEXT) \
-	editone/load.$(OBJEXT) editone/save.$(OBJEXT) \
-	editone/verse.$(OBJEXT) editone/logic.$(OBJEXT) \
-	editoneold/index.$(OBJEXT) editoneold/load.$(OBJEXT) \
-	editoneold/save.$(OBJEXT) editoneold/verse.$(OBJEXT) \
-	navigation/passage.$(OBJEXT) navigation/update.$(OBJEXT) \
-	navigation/poll.$(OBJEXT) ipc/focus.$(OBJEXT) \
-	ipc/notes.$(OBJEXT) checksum/logic.$(OBJEXT) \
-	editusfm/focus.$(OBJEXT) editusfm/index.$(OBJEXT) \
-	editusfm/load.$(OBJEXT) editusfm/offset.$(OBJEXT) \
-	editusfm/save.$(OBJEXT) editor/styles.$(OBJEXT) \
-	editor/html2usfm.$(OBJEXT) editor/usfm2html.$(OBJEXT) \
-	editor/select.$(OBJEXT) edit/edit.$(OBJEXT) edit/id.$(OBJEXT) \
-	edit/index.$(OBJEXT) edit/load.$(OBJEXT) edit/save.$(OBJEXT) \
-	edit/styles.$(OBJEXT) edit/logic.$(OBJEXT) \
-	edit/preview.$(OBJEXT) edit/position.$(OBJEXT) \
-	edit/navigate.$(OBJEXT) editold/index.$(OBJEXT) \
-	editold/load.$(OBJEXT) editold/save.$(OBJEXT) \
-	editold/offset.$(OBJEXT) editold/focus.$(OBJEXT) \
-	search/all.$(OBJEXT) search/index.$(OBJEXT) \
-	search/replace.$(OBJEXT) search/getids.$(OBJEXT) \
-	search/replacepre.$(OBJEXT) search/replacego.$(OBJEXT) \
-	search/search2.$(OBJEXT) search/replace2.$(OBJEXT) \
-	search/replacepre2.$(OBJEXT) search/getids2.$(OBJEXT) \
-	search/replacego2.$(OBJEXT) search/similar.$(OBJEXT) \
-	search/strongs.$(OBJEXT) search/strong.$(OBJEXT) \
-	search/originals.$(OBJEXT) tmp/tmp.$(OBJEXT) \
-	workspace/index.$(OBJEXT) workspace/logic.$(OBJEXT) \
-	workspace/settings.$(OBJEXT) workspace/organize.$(OBJEXT) \
-	sendreceive/logic.$(OBJEXT) sendreceive/index.$(OBJEXT) \
-	sendreceive/sendreceive.$(OBJEXT) \
+	collaboration/link.$(OBJEXT) collaboration/settings.$(OBJEXT) \
+	search/rebibles.$(OBJEXT) search/renotes.$(OBJEXT) \
+	access/user.$(OBJEXT) access/bible.$(OBJEXT) \
+	access/logic.$(OBJEXT) dialog/entry.$(OBJEXT) \
+	dialog/list.$(OBJEXT) dialog/yes.$(OBJEXT) \
+	dialog/color.$(OBJEXT) dialog/books.$(OBJEXT) \
+	dialog/upload.$(OBJEXT) fonts/logic.$(OBJEXT) \
+	versification/index.$(OBJEXT) versification/system.$(OBJEXT) \
+	versification/logic.$(OBJEXT) book/create.$(OBJEXT) \
+	compare/index.$(OBJEXT) compare/compare.$(OBJEXT) \
+	jobs/index.$(OBJEXT) editverse/index.$(OBJEXT) \
+	editone/index.$(OBJEXT) editone/load.$(OBJEXT) \
+	editone/save.$(OBJEXT) editone/verse.$(OBJEXT) \
+	editone/logic.$(OBJEXT) editoneold/index.$(OBJEXT) \
+	editoneold/load.$(OBJEXT) editoneold/save.$(OBJEXT) \
+	editoneold/verse.$(OBJEXT) navigation/passage.$(OBJEXT) \
+	navigation/update.$(OBJEXT) navigation/poll.$(OBJEXT) \
+	ipc/focus.$(OBJEXT) ipc/notes.$(OBJEXT) \
+	checksum/logic.$(OBJEXT) editusfm/focus.$(OBJEXT) \
+	editusfm/index.$(OBJEXT) editusfm/load.$(OBJEXT) \
+	editusfm/offset.$(OBJEXT) editusfm/save.$(OBJEXT) \
+	editor/styles.$(OBJEXT) editor/html2usfm.$(OBJEXT) \
+	editor/usfm2html.$(OBJEXT) editor/select.$(OBJEXT) \
+	edit/edit.$(OBJEXT) edit/id.$(OBJEXT) edit/index.$(OBJEXT) \
+	edit/load.$(OBJEXT) edit/save.$(OBJEXT) edit/styles.$(OBJEXT) \
+	edit/logic.$(OBJEXT) edit/preview.$(OBJEXT) \
+	edit/position.$(OBJEXT) edit/navigate.$(OBJEXT) \
+	editold/index.$(OBJEXT) editold/load.$(OBJEXT) \
+	editold/save.$(OBJEXT) editold/offset.$(OBJEXT) \
+	editold/focus.$(OBJEXT) search/all.$(OBJEXT) \
+	search/index.$(OBJEXT) search/replace.$(OBJEXT) \
+	search/getids.$(OBJEXT) search/replacepre.$(OBJEXT) \
+	search/replacego.$(OBJEXT) search/search2.$(OBJEXT) \
+	search/replace2.$(OBJEXT) search/replacepre2.$(OBJEXT) \
+	search/getids2.$(OBJEXT) search/replacego2.$(OBJEXT) \
+	search/similar.$(OBJEXT) search/strongs.$(OBJEXT) \
+	search/strong.$(OBJEXT) search/originals.$(OBJEXT) \
+	tmp/tmp.$(OBJEXT) workspace/index.$(OBJEXT) \
+	workspace/logic.$(OBJEXT) workspace/settings.$(OBJEXT) \
+	workspace/organize.$(OBJEXT) sendreceive/logic.$(OBJEXT) \
+	sendreceive/index.$(OBJEXT) sendreceive/sendreceive.$(OBJEXT) \
 	sendreceive/settings.$(OBJEXT) sendreceive/bibles.$(OBJEXT) \
 	sendreceive/notes.$(OBJEXT) sendreceive/changes.$(OBJEXT) \
 	sendreceive/files.$(OBJEXT) sendreceive/resources.$(OBJEXT) \
@@ -793,9 +792,8 @@ libbibledit_a_SOURCES = \
 	system/index.cpp \
 	system/logic.cpp \
 	collaboration/index.cpp \
-	collaboration/url.cpp \
 	collaboration/link.cpp \
-	collaboration/direction.cpp \
+	collaboration/settings.cpp \
 	search/rebibles.cpp \
 	search/renotes.cpp \
 	access/user.cpp \
@@ -1771,11 +1769,9 @@ collaboration/$(DEPDIR)/$(am__dirstamp):
 	@: > collaboration/$(DEPDIR)/$(am__dirstamp)
 collaboration/index.$(OBJEXT): collaboration/$(am__dirstamp) \
 	collaboration/$(DEPDIR)/$(am__dirstamp)
-collaboration/url.$(OBJEXT): collaboration/$(am__dirstamp) \
-	collaboration/$(DEPDIR)/$(am__dirstamp)
 collaboration/link.$(OBJEXT): collaboration/$(am__dirstamp) \
 	collaboration/$(DEPDIR)/$(am__dirstamp)
-collaboration/direction.$(OBJEXT): collaboration/$(am__dirstamp) \
+collaboration/settings.$(OBJEXT): collaboration/$(am__dirstamp) \
 	collaboration/$(DEPDIR)/$(am__dirstamp)
 search/$(am__dirstamp):
 	@$(MKDIR_P) search
@@ -3030,10 +3026,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@checksum/$(DEPDIR)/logic.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@client/$(DEPDIR)/index.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@client/$(DEPDIR)/logic.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@collaboration/$(DEPDIR)/direction.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@collaboration/$(DEPDIR)/index.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@collaboration/$(DEPDIR)/link.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@collaboration/$(DEPDIR)/url.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@collaboration/$(DEPDIR)/settings.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@compare/$(DEPDIR)/compare.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@compare/$(DEPDIR)/index.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@config/$(DEPDIR)/globals.Po@am__quote@
